--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "Lua.diagnostics.disable": [
-    "lowercase-global"
+    "lowercase-global",
+    "undefined-global"
+  ],
+  "Lua.workspace.checkThirdParty": false,
+  "Lua.runtime.version": "LuaJIT",
+  "Lua.workspace.library": [
+    "${3rd}/love2d/library"
   ]
 }
