--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "Lua.diagnostics.disable": [
     "lowercase-global",
-    "undefined-global"
+    "undefined-global",
+    "undefined-field"
   ],
   "Lua.workspace.checkThirdParty": false,
   "Lua.runtime.version": "LuaJIT",
